--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Eval DevOps</title>
+  <meta charset="UTF-8">
+  <title>Eval DevOps 2026</title>
 </head>
 <body>
-    <h1>TP DevOps</h1>
-    <p>
-        Page web simple
-        <div style="color:blue;">La page s'affiche normalement</div>
-    </p>
+
+  <p>Page web simple
+
+  <div style="color:blue;">
+    La page s'affiche normalement
+  </div>
+  </p>
 </body>
 </html>
+
