correction du fichier index.html

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 
-  <p>Page web simple
+  <p>Page web simple</p>
 
   <div style="color:blue;">
     La page s'affiche normalement
   </div>
-  </p>
+  
 </body>
 </html>
 
